--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+concurrency:
+  group: production
+
 env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: dale-ecs-deployment-repo
